[gd_scene format=3 uid="uid://5wv1gfwppcnf"]

[ext_resource type="Script" uid="uid://ch86ljq7iwgv8" path="res://source/client/gateway/gateway.gd" id="2_74q4y"]
[ext_resource type="Texture2D" uid="uid://cfihbj71a4y35" path="res://assets/sprites/gui/backgrounds/desert.png" id="3_1c3kr"]
[ext_resource type="Texture2D" uid="uid://cn5blfyqokda6" path="res://assets/sprites/gui/backgrounds/fairy_forest.png" id="4_uvr2v"]
[ext_resource type="FontFile" uid="uid://cehc3gujked8x" path="res://assets/fonts/Cinzel/static/Cinzel-Bold.ttf" id="5_opc3y"]
[ext_resource type="SpriteFrames" uid="uid://bqcsne8jhbmi8" path="res://source/common/gameplay/characters/sprite_frames/knight.tres" id="6_g2eid"]
[ext_resource type="FontFile" uid="uid://cr1d4ugttxggp" path="res://assets/fonts/Atkinson_Hyperlegible/AtkinsonHyperlegible-Bold.ttf" id="6_tnybn"]
[ext_resource type="Script" uid="uid://q5rsjtg6nsto" path="res://source/client/gateway/popup_panel.gd" id="9_4rdug"]
[ext_resource type="AudioStream" uid="uid://xxr4otrq1cg0" path="res://assets/audio/music/ekonia-main-theme.wav" id="10_q1aoo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q35d6"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_q35d6"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_1gybq"]
offsets = PackedFloat32Array(0, 0.25, 1)
colors = PackedColorArray(0, 0, 0, 0.1, 0.23, 0.23, 0.23, 0.4, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rk5g7"]
gradient = SubResource("Gradient_1gybq")
fill_from = Vector2(0, 0.465812)
fill_to = Vector2(1, 0.491453)

[sub_resource type="LabelSettings" id="LabelSettings_rky0m"]
font = ExtResource("6_tnybn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dfj0q"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0, 0, 0, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.692304, 0.737968, 0.839943, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 12
shadow_offset = Vector2(0, 4)

[node name="Gateway" type="Control" unique_id=1284599044]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_74q4y")

[node name="Desert" type="Sprite2D" parent="." unique_id=1202515985]
visible = false
position = Vector2(0, -300)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_1c3kr")
centered = false

[node name="FairyForest" type="Sprite2D" parent="." unique_id=1217529567]
position = Vector2(0, -300)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_uvr2v")
centered = false

[node name="BackgroundRect" type="ColorRect" parent="." unique_id=46713697]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129558, 0.129559, 0.129558, 0.35)

[node name="MainPanel" type="PanelContainer" parent="." unique_id=862795661]
custom_minimum_size = Vector2(560, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -160.0
offset_right = 280.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_q35d6")

[node name="PanelRect" type="TextureRect" parent="MainPanel" unique_id=2129319634]
visible = false
material = SubResource("CanvasItemMaterial_q35d6")
layout_mode = 2
texture = SubResource("GradientTexture2D_rk5g7")

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel" unique_id=411788836]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MainPanel/VBoxContainer" unique_id=2087592224]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Welcome"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainPanel/VBoxContainer" unique_id=281198905]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer" unique_id=1026911619]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="LoginButton" type="Button" parent="MainPanel/VBoxContainer/VBoxContainer" unique_id=1337529927]
custom_minimum_size = Vector2(420, 56)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
text = "Login"

[node name="CreateAccountButton" type="Button" parent="MainPanel/VBoxContainer/VBoxContainer" unique_id=1337747159]
custom_minimum_size = Vector2(420, 56)
layout_mode = 2
theme_type_variation = &"GradientButton"
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
text = "Create Account"

[node name="GuestButton" type="Button" parent="MainPanel/VBoxContainer/VBoxContainer" unique_id=720776451]
custom_minimum_size = Vector2(420, 56)
layout_mode = 2
theme_type_variation = &"GradientButton"
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
text = "Play as Guest"

[node name="LoginPanel" type="PanelContainer" parent="." unique_id=1270181654]
visible = false
custom_minimum_size = Vector2(560, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -166.5
offset_right = 280.0
offset_bottom = 166.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LoginPanel" unique_id=988172303]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="LoginPanel/VBoxContainer" unique_id=985210558]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Login"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="LoginPanel/VBoxContainer" unique_id=855095155]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="LoginPanel/VBoxContainer" unique_id=381977018]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="LoginPanel/VBoxContainer/VBoxContainer" unique_id=1851360215]
layout_mode = 2

[node name="Label" type="Label" parent="LoginPanel/VBoxContainer/VBoxContainer/VBoxContainer" unique_id=853022325]
layout_mode = 2
text = "Account name"
label_settings = SubResource("LabelSettings_rky0m")

[node name="LineEdit" type="LineEdit" parent="LoginPanel/VBoxContainer/VBoxContainer/VBoxContainer" unique_id=195149855]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 0.631373)
theme_override_styles/normal = SubResource("StyleBoxFlat_dfj0q")
placeholder_text = "Enter your account name here"

[node name="VBoxContainer2" type="VBoxContainer" parent="LoginPanel/VBoxContainer/VBoxContainer" unique_id=2068810630]
layout_mode = 2

[node name="Label" type="Label" parent="LoginPanel/VBoxContainer/VBoxContainer/VBoxContainer2" unique_id=1312898346]
layout_mode = 2
text = "Password"
label_settings = SubResource("LabelSettings_rky0m")

[node name="LineEdit" type="LineEdit" parent="LoginPanel/VBoxContainer/VBoxContainer/VBoxContainer2" unique_id=821843118]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 0.631373)
theme_override_styles/normal = SubResource("StyleBoxFlat_dfj0q")
placeholder_text = "Enter your password here"

[node name="LoginButton" type="Button" parent="LoginPanel/VBoxContainer/VBoxContainer" unique_id=2113345034]
custom_minimum_size = Vector2(420, 56)
layout_mode = 2
theme_type_variation = &"GradientButton"
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
text = "Login"

[node name="CreateAccountPanel" type="PanelContainer" parent="." unique_id=590883483]
visible = false
custom_minimum_size = Vector2(560, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -211.5
offset_right = 280.0
offset_bottom = 211.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreateAccountPanel" unique_id=2065126169]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CreateAccountPanel/VBoxContainer" unique_id=1492652728]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Create Account"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CreateAccountPanel/VBoxContainer" unique_id=353400196]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CreateAccountPanel/VBoxContainer" unique_id=358211503]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CreateAccountPanel/VBoxContainer/VBoxContainer" unique_id=1253021176]
layout_mode = 2

[node name="Label" type="Label" parent="CreateAccountPanel/VBoxContainer/VBoxContainer/VBoxContainer" unique_id=201484594]
layout_mode = 2
text = "Account name"
label_settings = SubResource("LabelSettings_rky0m")

[node name="LineEdit" type="LineEdit" parent="CreateAccountPanel/VBoxContainer/VBoxContainer/VBoxContainer" unique_id=1669515998]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 0.454902)
theme_override_styles/normal = SubResource("StyleBoxFlat_dfj0q")
placeholder_text = "Enter your account name here"

[node name="VBoxContainer2" type="VBoxContainer" parent="CreateAccountPanel/VBoxContainer/VBoxContainer" unique_id=1171113857]
layout_mode = 2

[node name="Label" type="Label" parent="CreateAccountPanel/VBoxContainer/VBoxContainer/VBoxContainer2" unique_id=956749995]
layout_mode = 2
text = "Password"
label_settings = SubResource("LabelSettings_rky0m")

[node name="LineEdit" type="LineEdit" parent="CreateAccountPanel/VBoxContainer/VBoxContainer/VBoxContainer2" unique_id=331063020]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 0.454902)
theme_override_styles/normal = SubResource("StyleBoxFlat_dfj0q")
placeholder_text = "Enter your password here"

[node name="VBoxContainer3" type="VBoxContainer" parent="CreateAccountPanel/VBoxContainer/VBoxContainer" unique_id=327902638]
layout_mode = 2

[node name="Label" type="Label" parent="CreateAccountPanel/VBoxContainer/VBoxContainer/VBoxContainer3" unique_id=173721393]
layout_mode = 2
text = "Password Repeat"
label_settings = SubResource("LabelSettings_rky0m")

[node name="LineEdit" type="LineEdit" parent="CreateAccountPanel/VBoxContainer/VBoxContainer/VBoxContainer3" unique_id=1285641241]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 0.454902)
theme_override_styles/normal = SubResource("StyleBoxFlat_dfj0q")
placeholder_text = "Enter your password again here"

[node name="CreateAccountButton" type="Button" parent="CreateAccountPanel/VBoxContainer/VBoxContainer" unique_id=1234407790]
custom_minimum_size = Vector2(420, 56)
layout_mode = 2
theme_type_variation = &"GradientButton"
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
text = "Create Account"

[node name="WorldSelection" type="PanelContainer" parent="." unique_id=306961090]
visible = false
custom_minimum_size = Vector2(560, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -160.0
offset_right = 280.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_q35d6")

[node name="VBoxContainer" type="VBoxContainer" parent="WorldSelection" unique_id=1830473629]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="WorldSelection/VBoxContainer" unique_id=1449260793]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "World Selection"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="WorldSelection/VBoxContainer" unique_id=1022584007]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="WorldSelection/VBoxContainer" unique_id=1595606682]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="CharacterSelection" type="PanelContainer" parent="." unique_id=1308493296]
visible = false
custom_minimum_size = Vector2(560, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -160.0
offset_right = 280.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_q35d6")

[node name="PanelRect" type="TextureRect" parent="CharacterSelection" unique_id=35002467]
visible = false
material = SubResource("CanvasItemMaterial_q35d6")
layout_mode = 2
texture = SubResource("GradientTexture2D_rk5g7")

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSelection" unique_id=1497754775]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CharacterSelection/VBoxContainer" unique_id=1397529779]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Character Selection"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CharacterSelection/VBoxContainer" unique_id=694094335]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterSelection/VBoxContainer" unique_id=1665792806]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Button" type="Button" parent="CharacterSelection/VBoxContainer/HBoxContainer" unique_id=1605850220]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
text = "Sladida

Rules:
Vladi
gz

Mondial"

[node name="Button2" type="Button" parent="CharacterSelection/VBoxContainer/HBoxContainer" unique_id=1973075791]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
text = "Sladida

Rules:
Vladi
gz

Mondial"

[node name="Button3" type="Button" parent="CharacterSelection/VBoxContainer/HBoxContainer" unique_id=1123899771]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
text = "Sladida

Rules:
Vladi
gz

Mondial"

[node name="CharacterCreation" type="PanelContainer" parent="." unique_id=908148419]
visible = false
custom_minimum_size = Vector2(560, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -249.0
offset_right = 350.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterCreation" unique_id=401491968]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CharacterCreation/VBoxContainer" unique_id=1588363991]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Character Creation"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CharacterCreation/VBoxContainer" unique_id=573902709]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterCreation/VBoxContainer" unique_id=1100261266]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterCreation/VBoxContainer/VBoxContainer" unique_id=1540395733]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer" unique_id=2103794724]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" unique_id=164507258]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 18
text = "Starting Skin"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" unique_id=1444564948]
layout_mode = 2

[node name="VBoxContainer" type="GridContainer" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" unique_id=1719284324]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="CreateButton" type="Button" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer" unique_id=1439704628]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"GradientButton"
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 16
text = "Knight"

[node name="CreateButton2" type="Button" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer" unique_id=657908895]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"GradientButton"
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 16
text = "Rogue"

[node name="CreateButton3" type="Button" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer" unique_id=443363676]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"GradientButton"
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 16
text = "Wizard"

[node name="CreateButton4" type="Button" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer" unique_id=2126970449]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"GradientButton"
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 16
text = "???"

[node name="VBoxContainer2" type="VBoxContainer" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer" unique_id=830036359]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2" unique_id=893379059]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 18
text = "Preview"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2" unique_id=466875220]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2" unique_id=1477882383]
layout_mode = 2

[node name="Control" type="Control" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CenterContainer" unique_id=88384049]
custom_minimum_size = Vector2(260, 130)
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CenterContainer/Control" unique_id=1440170042]
position = Vector2(0, -130)
scale = Vector2(4, 4)
sprite_frames = ExtResource("6_g2eid")
animation = &"run"
centered = false

[node name="VBoxContainer3" type="VBoxContainer" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer" unique_id=1309098980]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3" unique_id=315743443]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 18
text = "Description"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3" unique_id=1433206766]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3" unique_id=911833712]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Wizard
A master of elemental forces, commanding powerful spells to devastate enemies or support allies."

[node name="HBoxContainer2" type="HBoxContainer" parent="CharacterCreation/VBoxContainer/VBoxContainer" unique_id=2103616439]
layout_mode = 2
size_flags_horizontal = 4

[node name="LineEdit" type="LineEdit" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer2" unique_id=1239904306]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Character name"

[node name="Button" type="Button" parent="CharacterCreation/VBoxContainer/VBoxContainer/HBoxContainer2" unique_id=1387397406]
visible = false
layout_mode = 2
text = "Random"

[node name="CreateButton" type="Button" parent="CharacterCreation/VBoxContainer/VBoxContainer" unique_id=834019351]
custom_minimum_size = Vector2(210, 56)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"GradientButton"
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
text = "Create"

[node name="PopupPanel" type="PanelContainer" parent="." unique_id=1187456157]
visible = false
custom_minimum_size = Vector2(700, 480)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -160.0
offset_right = 280.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_4rdug")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel" unique_id=1077692107]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="PopupPanel/VBoxContainer" unique_id=701584626]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_opc3y")
theme_override_font_sizes/font_size = 24
text = "Waiting"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PopupPanel/VBoxContainer" unique_id=1791779995]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/VBoxContainer" unique_id=1311030769]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PopupPanel/VBoxContainer/VBoxContainer" unique_id=1695698164]
layout_mode = 2
size_flags_vertical = 3
text = "Waiting ..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmButton" type="Button" parent="PopupPanel/VBoxContainer/VBoxContainer" unique_id=1322949297]
custom_minimum_size = Vector2(220, 56)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"GradientButton"
theme_override_fonts/font = ExtResource("6_tnybn")
theme_override_font_sizes/font_size = 18
text = "OK"

[node name="SwapButton" type="Button" parent="." unique_id=461701609]
layout_mode = 0
offset_left = 915.0
offset_top = 492.0
offset_right = 955.0
offset_bottom = 532.0
toggle_mode = true

[node name="BackButton" type="Button" parent="." unique_id=1060070352]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -52.0
offset_right = 104.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_tnybn")
text = "Back"

[node name="ConnectionInfo" type="Label" parent="." unique_id=911295128]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -54.0
offset_right = 140.0
offset_bottom = -9.0
grow_vertical = 0
text = "Not connected yet
"
horizontal_alignment = 3
vertical_alignment = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=359148188]
stream = ExtResource("10_q1aoo")
volume_db = -12.0

[node name="HTTPRequest" type="HTTPRequest" parent="." unique_id=1237181825]
accept_gzip = false
timeout = 7.0

[node name="Debugbutton" type="Button" parent="." unique_id=1333002847]
visible = false
layout_mode = 0
offset_left = 342.0
offset_top = 19.0
offset_right = 598.48145
offset_bottom = 93.422356
text = "Debug Account Available"

[connection signal="pressed" from="MainPanel/VBoxContainer/VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="MainPanel/VBoxContainer/VBoxContainer/CreateAccountButton" to="." method="_on_create_account_button_pressed"]
[connection signal="pressed" from="MainPanel/VBoxContainer/VBoxContainer/GuestButton" to="." method="_on_guest_button_pressed"]
[connection signal="pressed" from="LoginPanel/VBoxContainer/VBoxContainer/LoginButton" to="." method="_on_login_login_button_pressed"]
[connection signal="pressed" from="CreateAccountPanel/VBoxContainer/VBoxContainer/CreateAccountButton" to="." method="create_account"]
[connection signal="pressed" from="CharacterCreation/VBoxContainer/VBoxContainer/CreateButton" to="." method="_on_create_character_button_pressed"]
